--- a/references.bib
+++ b/references.bib
@@ -10853,3 +10853,29 @@ Subject\_term: Computational biology and bioinformatics, Computer science, Resea
   abstract = {Systematic error from selection bias, uncontrolled confounding, and misclassification is ubiquitous in epidemiologic research but is rarely quantified using quantitative bias analysis (QBA). This gap may in part be due to the lack of readily modifiable software to implement these methods. Our objective is to provide computing code that can be tailored to an analyst's dataset. We briefly describe the methods for implementing QBA for misclassification and uncontrolled confounding and present the reader with example code for how such bias analyses, using both summary-level data and individual record-level data, can be implemented in both SAS and R. Our examples show how adjustment for uncontrolled confounding and misclassification can be implemented. Resulting bias-adjusted point estimates can then be compared to conventional results to see the impact of this bias in terms of its direction and magnitude. Further, we show how 95\% simulation intervals can be generated that can be compared to conventional 95\% confidence intervals to see the impact of the bias on uncertainty. Having easy to implement code that users can apply to their own datasets will hopefully help spur more frequent use of these methods and prevent poor inferences drawn from studies that do not quantify the impact of systematic error on their results.},
   file = {/home/work/Zotero/storage/LY36QW4U/Fox et al. - 2023 - SAS and R code for probabilistic quantitative bias analysis for misclassified binary variables and b.pdf;/home/work/Zotero/storage/H3YZYLUS/7152433.html}
 }
+
+@misc{NewEpistemologicalPerspectives,
+  title = {New {{Epistemological Perspectives}} on {{Quantitative Methods}}: {{An Example Using Topological Data Analysis}} {\textbar} {{Studies}} in {{Engineering Education}}},
+  urldate = {2024-09-02},
+  howpublished = {https://seejournal.org/articles/10.21061/see.18},
+  file = {/home/work/Zotero/storage/RJPXEBS8/see.html}
+}
+
+@article{curtisQuantitativeCriticalismGuidelines2022,
+  title = {Quantitative Criticalism: {{Guidelines}} for Conducting Transformative Quantitative Family Science Research},
+  shorttitle = {Quantitative Criticalism},
+  author = {Curtis, Michael G. and Boe, Joshua L. and King, V. Elizabeth and Osborne, Kimberly R.},
+  year = {2022},
+  journal = {Journal of Family Theory \& Review},
+  volume = {14},
+  number = {3},
+  pages = {421--441},
+  issn = {1756-2589},
+  doi = {10.1111/jftr.12449},
+  urldate = {2024-09-02},
+  abstract = {Historically, research has been used by systems of authority to marginalize and oppress minoritized populations. Family scientists have recently begun the work of disentangling themselves from these oppressive legacies (e. g., White supremacist, sexist, heterosexist, cisgenderist, etc.). As such, the field is at a vital crux in which there is a need to challenge prevailing quantitative methodological assumptions and practices in order to address and disrupt how statistical analyses can shape family sciences away from a social-justice agenda. Drawing upon principles of critical social theory, critical race theory, and Black Feminist scholarship, this article elaborates on how family scientists can utilize Quantitative Criticalism, or QuantCrit, as a framework for conducting social justice-orientated quantitative research. We conclude by illustrating how the tenets of QuantCrit can be utilized throughout the research process. It is our hope that readers will identify moments in their own scholarship in which these tenets can be applied.},
+  copyright = {{\copyright} 2022 The Authors. Journal of Family Theory \& Review published by Wiley Periodicals LLC on behalf of National Council for Family Relations.},
+  langid = {english},
+  keywords = {anti-oppressive praxis,critical social theory,discrimination,marginalization,QuantCrit,quantitative criticalism,social justice},
+  file = {/home/work/Zotero/storage/83R9L92L/Curtis et al. - 2022 - Quantitative criticalism Guidelines for conducting transformative quantitative family science resea.pdf;/home/work/Zotero/storage/BY88I3FM/jftr.html}
+}
